--- a/app/src/main/res/layout/fragment_settings_modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_settings_modal_bottom_sheet.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 05.03.20 18:55
+  ~ Last modified 06.03.20 17:30
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -57,18 +57,17 @@
 			android:layout_height="wrap_content"
 			android:background="@null"
 
-			app:internalPadding="@dimen/general_margin_8"
-			app:showLabels="true"
-
 			app:absoluteMinValue="50"
 			app:absoluteMaxValue="18"
 
-			app:alwaysActive="true"
+			app:alwaysActive="false"
+
 			app:textAboveThumbsColor="@color/white"
 			app:thumbDisabled="@drawable/custom_slider_thumb"
 			app:thumbNormal="@drawable/custom_slider_thumb"
 			app:thumbPressed="@drawable/custom_slider_thumb"
-			app:thumbShadow="true"
+
+			app:showLabels="true"
 			app:valuesAboveThumbs="true"
 			/>
 
@@ -100,7 +99,6 @@
 
 		app:selectionRequired="true"
 		app:singleSelection="false"
-		app:checkedButton="@id/btnPickerPreferredGenderMale"
 
 		app:layout_constraintStart_toStartOf="@id/guidelineStart"
 		app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
@@ -115,7 +113,7 @@
 			android:layout_weight="1"
 			android:padding="@dimen/general_margin_16"
 
-			android:text="Male"
+			android:text="@string/genderMale"
 			android:textSize="20sp"
 			android:textAllCaps="false"
 			android:textAppearance="@style/light_text_white85op"
@@ -133,9 +131,8 @@
 			android:layout_weight="1"
 			android:padding="@dimen/general_margin_16"
 
-			android:text="Female"
+			android:text="@string/genderFemale"
 			android:textSize="20sp"
-			android:textAllCaps="false"
 			android:textAppearance="@style/light_text_white85op"
 			android:textColor="@color/white_tint_color"
 
